--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -13,6 +13,7 @@
     position: relative;
     overflow: hidden;
     outline: none;
+    white-space: nowrap;
 
     transition: all .2s ease-in;
 
@@ -56,6 +57,11 @@
   &--middle{
     padding: 1.5rem 7rem;
     font-size: .9rem;
+
+    @media only screen and (max-width: 768px) {
+      padding: 1.5rem 5.5rem;
+
+    }
   }
 
   &--big{
