--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ body {
   color: #504f4f;
   line-height: 1.5; }
 
+::selection {
+  background-color: rgba(61, 190, 113, 0.6); }
+
 @keyframes anim-info {
   0% {
     opacity: 0;
@@ -28,6 +31,39 @@ body {
   100% {
     opacity: 1;
     transform: scale(1); } }
+
+@keyframes anim-nav {
+  0% {
+    top: 0;
+    opacity: 0; }
+  100% {
+    opacity: 1;
+    top: 2rem;
+    visibility: visible; } }
+
+@keyframes nav-icon {
+  0% {
+    background-color: #ffffff; }
+  30% {
+    background-color: transparent; }
+  100% {
+    background-color: transparent; } }
+
+@keyframes nav-icon-before {
+  0% {
+    transform: translateY(0); }
+  30% {
+    transform: translateY(6px); }
+  100% {
+    transform: translateY(6px) rotate(45deg); } }
+
+@keyframes nav-icon-after {
+  0% {
+    transform: translateY(0); }
+  30% {
+    transform: translateY(-6px); }
+  100% {
+    transform: translateY(-6px) rotate(-45deg); } }
 
 .t1 {
   font-family: 'Nunito', sans-serif;
@@ -40,6 +76,9 @@ body {
   @media only screen and (max-width: 1000px) {
     .t1 {
       font-size: 2rem; } }
+  @media only screen and (max-width: 768px) {
+    .t1 {
+      font-size: 1.6rem; } }
 
 .t2 {
   font-family: 'Nunito', sans-serif;
@@ -88,6 +127,7 @@ body {
   position: relative;
   overflow: hidden;
   outline: none;
+  white-space: nowrap;
   transition: all .2s ease-in; }
   .btn span {
     position: absolute;
@@ -111,6 +151,9 @@ body {
   .btn--middle {
     padding: 1.5rem 7rem;
     font-size: .9rem; }
+    @media only screen and (max-width: 768px) {
+      .btn--middle {
+        padding: 1.5rem 5.5rem; } }
   .btn--big {
     padding: 2rem 8rem;
     font-size: .9rem; }
@@ -133,6 +176,10 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 768px) {
+    .card {
+      width: 45%;
+      height: 45%; } }
   .card__top {
     flex: 0 0 45%;
     width: 100%;
@@ -201,6 +248,9 @@ body {
       right: 10%;
       top: 33%;
       z-index: 10; }
+      @media only screen and (max-width: 768px) {
+        .card:nth-child(2)::before {
+          transform: scale(1.2); } }
     .card:nth-child(2)::after {
       content: "En \a popüler";
       white-space: pre;
@@ -215,6 +265,13 @@ body {
       text-align: center;
       line-height: 1.25;
       letter-spacing: 1.5px; }
+      @media only screen and (max-width: 768px) {
+        .card:nth-child(2)::after {
+          right: 12%;
+          top: 36%; } }
+    @media only screen and (max-width: 768px) {
+      .card:nth-child(2) {
+        transform: scale(1); } }
 
 .card--pink {
   background-image: linear-gradient(to right bottom, #ee4266, rgba(232, 136, 156, 0.6)); }
@@ -254,6 +311,10 @@ body {
   width: 20%;
   height: 21rem;
   position: relative; }
+  @media only screen and (max-width: 768px) {
+    .comment {
+      width: 35%;
+      margin-bottom: 2rem; } }
   .comment__content {
     position: absolute;
     padding: 4rem 1rem;
@@ -285,6 +346,9 @@ body {
     letter-spacing: 1px;
     text-align: justify;
     color: rgba(80, 79, 79, 0.7); }
+    @media only screen and (max-width: 768px) {
+      .comment__text {
+        font-size: .9rem; } }
   .comment__name {
     display: block;
     font-family: 'Nunito', sans-serif;
@@ -305,10 +369,19 @@ body {
   justify-content: space-around;
   align-items: center;
   height: 14rem; }
+  @media only screen and (max-width: 768px) {
+    .counter {
+      height: 14rem;
+      width: 40%;
+      margin-bottom: 1rem; } }
   .counter__svg {
     width: 3rem;
     height: 3rem;
     fill: white; }
+    @media only screen and (max-width: 768px) {
+      .counter__svg {
+        width: 2.2rem;
+        height: 2.2rem; } }
   .counter__num {
     font-family: 'Nunito', sans-serif;
     font-size: 2.5rem;
@@ -318,7 +391,9 @@ body {
   .counter__p {
     font-family: 'Nunito', sans-serif;
     letter-spacing: 1px;
-    color: #ffffff; }
+    color: #ffffff;
+    font-weight: 800;
+    white-space: nowrap; }
 
 .form {
   height: 30rem;
@@ -393,7 +468,8 @@ body {
   position: relative;
   flex-basis: 90%;
   display: flex;
-  justify-content: flex-end; }
+  flex-direction: column;
+  align-items: flex-end; }
   @media only screen and (max-width: 1000px) {
     .navigation {
       flex: 1; } }
@@ -409,12 +485,8 @@ body {
     border-radius: 2px;
     background-color: #3dbe71;
     padding: 4px;
-    height: 1.8rem;
-    width: 2rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center; }
+    height: 2rem;
+    width: 2.5rem; }
     @media only screen and (max-width: 768px) {
       .navigation__button {
         visibility: visible; } }
@@ -422,48 +494,115 @@ body {
     display: block;
     width: 1.4rem;
     height: 2.5px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: #ffffff; }
-  .navigation__nav {
+    .navigation__icon::before, .navigation__icon::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 1.4rem;
+      height: 2.5px;
+      background-color: #ffffff; }
+    .navigation__icon::before {
+      top: -6px; }
+    .navigation__icon:after {
+      top: 6px; }
+  .navigation .nav-top {
     list-style: none;
     width: 75%;
     display: flex;
     justify-content: space-between;
     align-items: center; }
     @media only screen and (max-width: 1000px) {
-      .navigation__nav {
+      .navigation .nav-top {
         width: 80%; } }
     @media only screen and (max-width: 768px) {
-      .navigation__nav {
+      .navigation .nav-top {
         display: none; } }
-  .navigation__list {
-    flex: 0 0 80%;
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    align-items: center; }
-    @media only screen and (max-width: 1000px) {
-      .navigation__list {
-        justify-content: space-between; } }
-  .navigation__link {
-    transition: all 1s;
-    position: relative; }
-    .navigation__link::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 0;
-      height: 3px;
-      background-color: #3dbe71;
-      transition: all .2s ease-in; }
-    .navigation__link:visited, .navigation__link:link {
-      font-size: .8rem;
-      color: rgba(0, 0, 0, 0.7);
+    .navigation .nav-top__list {
+      flex: 0 0 80%;
+      list-style: none;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      transition: all .5s; }
+      @media only screen and (max-width: 1000px) {
+        .navigation .nav-top__list {
+          justify-content: space-between; } }
+    .navigation .nav-top__link {
+      transition: all 1s;
+      position: relative; }
+      .navigation .nav-top__link::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -3px;
+        width: 0;
+        height: 3px;
+        background-color: #3dbe71;
+        transition: all .2s ease-in; }
+      .navigation .nav-top__link:visited, .navigation .nav-top__link:link {
+        font-size: .8rem;
+        color: rgba(0, 0, 0, 0.7);
+        text-decoration: none;
+        text-transform: uppercase;
+        font-weight: 600; }
+      .navigation .nav-top__link:hover::after, .navigation .nav-top__link:active::after {
+        width: 100%; }
+  .navigation .nav-bottom {
+    visibility: hidden;
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    z-index: 100;
+    width: 100%;
+    height: 24rem;
+    padding: 2rem 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.2); }
+    @supports (-webkit-backdrop-filter: blur(8px)) or (backdrop-filter: blur(8px)) {
+      .navigation .nav-bottom {
+        -webkit-backdrop-filter: blur(8 px);
+        backdrop-filter: blur(8px);
+        background-color: rgba(0, 0, 0, 0.4); } }
+    .navigation .nav-bottom__list {
+      width: 100%;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center; }
+    .navigation .nav-bottom__link:link, .navigation .nav-bottom__link:visited {
+      font-size: 1.2rem;
+      display: block;
       text-decoration: none;
-      text-transform: uppercase;
-      font-weight: 600; }
-    .navigation__link:hover::after, .navigation__link:active::after {
-      width: 100%; }
+      color: #ffffff;
+      padding: .5rem 0;
+      letter-spacing: 2px;
+      text-transform: uppercase; }
+    .navigation .nav-bottom__link:hover, .navigation .nav-bottom__link:active {
+      color: #17015d;
+      font-weight: 700; }
+  .navigation__checkbox:checked ~ .nav-bottom {
+    display: flex;
+    animation: anim-nav .4s ease-in .2s;
+    animation-fill-mode: forwards; }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon {
+    animation: nav-icon .3s;
+    animation-fill-mode: forwards; }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+    animation: nav-icon-before .5s;
+    animation-fill-mode: forwards; }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+    animation: nav-icon-after .5s;
+    animation-fill-mode: forwards; }
 
 .header {
   min-height: 8rem;
@@ -479,16 +618,17 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media only screen and (max-width: 768px) {
+      .header__social-search {
+        right: 0; } }
   .header__logo {
     position: absolute;
-    left: 15%;
+    left: 10%;
     top: 50%;
     transform: translate(-50%, -50%);
     display: flex;
-    align-items: center; }
-    @media only screen and (max-width: 1000px) {
-      .header__logo {
-        left: 10%; } }
+    align-items: center;
+    z-index: 100; }
     @media only screen and (max-width: 768px) {
       .header__logo {
         left: 15%; } }
@@ -501,6 +641,9 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center; }
+  @media only screen and (max-width: 1000px) {
+    .footer {
+      height: 30rem; } }
   .footer__top {
     flex: 0 0 85%;
     width: 100%;
@@ -520,6 +663,9 @@ body {
     height: 70%;
     display: flex;
     justify-content: space-between; }
+    @media only screen and (max-width: 1000px) {
+      .footer__top-right {
+        flex-wrap: wrap; } }
   .footer__bottom {
     flex: 1;
     width: 100%;
@@ -528,9 +674,15 @@ body {
     align-items: center;
     background-color: #5db380; }
   .footer__container {
-    width: 100%; }
+    flex: 0 0 20%; }
+    @media only screen and (max-width: 1000px) {
+      .footer__container {
+        flex: 0 0 25%; } }
     .footer__container:last-child {
       flex: 0 0 35%; }
+      @media only screen and (max-width: 1000px) {
+        .footer__container:last-child {
+          flex: 0 0 45%; } }
   .footer__header {
     font-size: 1.2rem;
     font-family: 'Nunito', sans-serif;
@@ -551,7 +703,6 @@ body {
     margin-top: 1rem; }
   .footer__item {
     display: flex;
-    height: 2rem;
     justify-content: flex-start;
     align-items: center;
     text-indent: 1.5rem;
@@ -606,7 +757,14 @@ body {
 .sec-info {
   height: 39rem;
   padding: 4rem 6rem 1rem 6rem;
-  display: flex; }
+  display: flex;
+  justify-content: center; }
+  .sec-info__container {
+    width: 100%;
+    display: flex; }
+    @media only screen and (min-width: 1400px) {
+      .sec-info__container {
+        width: 80%; } }
   .sec-info__left {
     flex: 0 0 50%;
     height: 65%;
@@ -615,26 +773,35 @@ body {
     justify-content: space-between;
     align-items: flex-start;
     animation: anim-info .4s ease-out; }
+    @media only screen and (max-width: 768px) {
+      .sec-info__left {
+        height: 70%; } }
   .sec-info__right {
-    animation: anim-info .4s ease-out;
     flex: 0 0 50%;
     display: flex;
     justify-content: center;
-    align-items: flex-start; }
+    align-items: flex-start;
+    animation: anim-info .4s ease-out; }
   .sec-info__img {
     width: 90%;
     height: 90%; }
+  @media only screen and (max-width: 768px) {
+    .sec-info {
+      padding: 4rem 3rem 1rem 3rem; } }
 
 .sec-features {
   padding: 4rem 6rem;
-  height: 50rem;
+  min-height: 50rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 768px) {
+    .sec-features {
+      padding: 3rem; } }
   .sec-features__content {
     width: 90%;
-    height: 32rem;
+    min-height: 32rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap; }
@@ -648,8 +815,11 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around; }
+    @media only screen and (max-width: 768px) {
+      .sec-features__texts {
+        margin-bottom: 2rem; } }
   .sec-features__feature {
-    height: 13rem;
+    min-height: 13rem;
     width: 27%;
     text-align: justify;
     display: flex;
@@ -657,11 +827,17 @@ body {
     justify-content: space-between;
     align-items: center; }
     .sec-features__feature h2 {
-      flex: 0 0 20%;
       white-space: nowrap; }
+    @media only screen and (max-width: 1000px) {
+      .sec-features__feature {
+        margin: 1rem; } }
+    @media only screen and (max-width: 768px) {
+      .sec-features__feature {
+        justify-content: space-around;
+        width: 40%; } }
   .sec-features__img {
-    flex: 0 0 20%;
     width: 2.5rem;
+    height: 2.5rem;
     fill: #3dbe71; }
 
 .workflow {
@@ -718,6 +894,9 @@ body {
     font-size: 1.2rem;
     margin-bottom: .5rem;
     letter-spacing: 1px; }
+    @media only screen and (max-width: 768px) {
+      .workflow__heading {
+        font-size: 1rem; } }
   .workflow__text {
     font-size: .9rem; }
   .workflow__img {
@@ -729,24 +908,46 @@ body {
     float: left;
     shape-outside: circle(50%);
     margin: 0 1rem; }
+    @media only screen and (max-width: 768px) {
+      .workflow__img {
+        width: 6rem;
+        height: 6rem; } }
 
 .sec-counter {
   height: 40rem;
   padding: 3rem 6rem;
-  background-image: linear-gradient(to bottom, rgba(227, 163, 150, 0.5), rgba(227, 163, 150, 0.4)), url("../../imgs/bg.jpg");
+  background-image: linear-gradient(to bottom, rgba(227, 163, 150, 0.6), rgba(227, 163, 150, 0.5)), url("../../imgs/bg.jpg");
   background-size: cover;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center; }
+  justify-content: center; }
+  .sec-counter__container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center; }
+  @media only screen and (max-width: 1000px) {
+    .sec-counter {
+      padding: 3rem 2rem; } }
+  @media only screen and (max-width: 768px) {
+    .sec-counter {
+      padding: 3rem 2rem;
+      height: 50rem; } }
   .sec-counter__top {
     width: 70%;
     text-align: center; }
+    @media only screen and (max-width: 768px) {
+      .sec-counter__top {
+        margin-bottom: 2rem; } }
   .sec-counter__bottom {
-    width: 80%;
-    flex: 0 0 40%;
+    width: 100%;
     display: flex;
     justify-content: space-between; }
+    @media only screen and (max-width: 768px) {
+      .sec-counter__bottom {
+        width: 65%;
+        justify-content: space-around;
+        flex-wrap: wrap; } }
 
 .sec-cards {
   height: 55rem;
@@ -756,12 +957,27 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 1000px) {
+    .sec-cards {
+      padding: 4rem 1rem 2rem 1rem; } }
+  @media only screen and (max-width: 768px) {
+    .sec-cards {
+      height: 90rem;
+      justify-content: space-around; } }
   .sec-cards__cards {
     flex: 0 0 90%;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media only screen and (min-width: 1400px) {
+      .sec-cards__cards {
+        width: 70%; } }
+    @media only screen and (max-width: 768px) {
+      .sec-cards__cards {
+        flex: 0 0 95%;
+        flex-wrap: wrap;
+        justify-content: space-around; } }
 
 .sec-idea {
   height: 35rem;
@@ -778,6 +994,9 @@ body {
     font-size: 3.5rem;
     color: #fff;
     letter-spacing: 2px; }
+    @media only screen and (max-width: 768px) {
+      .sec-idea__text {
+        font-size: 3rem; } }
 
 .sec-comment {
   height: 40rem;
@@ -786,15 +1005,31 @@ body {
   background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center; }
+  @media only screen and (max-width: 1000px) {
+    .sec-comment {
+      padding: 4rem 2rem; } }
+  @media only screen and (max-width: 768px) {
+    .sec-comment {
+      padding: 3rem 1rem 2rem 1rem;
+      height: 56rem; } }
   .sec-comment__top {
     flex: 0 0 20%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     text-align: center; }
+    @media only screen and (max-width: 768px) {
+      .sec-comment__top {
+        flex: 1;
+        margin-bottom: 4rem; } }
   .sec-comment__bottom {
     flex: 0 0 80%;
+    width: 80%;
     display: flex;
     justify-content: space-around;
     align-items: flex-start; }
+    @media only screen and (max-width: 768px) {
+      .sec-comment__bottom {
+        flex-wrap: wrap; } }
