--- a/sass/components/_comment.scss
+++ b/sass/components/_comment.scss
@@ -6,6 +6,12 @@
 
   position: relative;
 
+  @media only screen and (max-width: 768px) {
+    width: 35%;
+    margin-bottom: 2rem;
+  }
+
+
   &__content{
     position: absolute;
     padding: 4rem 1rem;
@@ -55,6 +61,10 @@
     text-align: justify;
     color: rgba($color-font-1,.7);
     // color:#676666;
+    @media only screen and (max-width: 768px) {
+     font-size: .9rem;
+    }
+
 
   }
 
