--- a/sass/components/_counter.scss
+++ b/sass/components/_counter.scss
@@ -11,10 +11,23 @@
   align-items: center;
   height: 14rem;
 
+  @media only screen and (max-width: 768px) {
+    height: 14rem;
+    width: 40%;
+    margin-bottom: 1rem;
+
+  }
+
+
   &__svg{
     width: 3rem;
     height: 3rem;
     fill: white;
+
+    @media only screen and (max-width: 768px) {
+      width: 2.2rem;
+      height: 2.2rem;
+    }
 
   }
 
@@ -31,6 +44,8 @@
     font-family: 'Nunito', sans-serif;
     letter-spacing: 1px;
     color:$color-white;
+    font-weight:800;
+    white-space: nowrap;
 
 
   }
