--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,6 +11,11 @@
  justify-content: flex-start;
  align-items: center;
 
+ @media only screen and (max-width: 1000px) {
+
+  height: 30rem;
+ }
+
 
  &__top{
   flex: 0 0 85%;
@@ -23,12 +28,14 @@
   align-items: center;
 
 
+
+
  }
 
  &__top-left{
   flex:0 0 25%;
   height: 90%;
-  //background-color: orange;
+
 
 
   display: flex;
@@ -49,6 +56,13 @@
   height: 70%;
   display: flex;
   justify-content: space-between;
+
+  @media only screen and (max-width: 1000px) {
+
+  flex-wrap: wrap;
+  }
+
+
  }
 
  &__bottom{
@@ -63,11 +77,22 @@
  }
 
  &__container{
+  flex: 0 0 20%;
 
-  width: 100%;
+  @media only screen and (max-width: 1000px) {
+
+   flex: 0 0 25%;
+  }
+
+
 
    &:last-child{
     flex: 0 0 35%;
+    @media only screen and (max-width: 1000px) {
+
+     flex: 0 0 45%;
+    }
+
    }
 
 
@@ -106,10 +131,7 @@
  }
 
  &__item{
-
-
   display: flex;
-  height: 2rem;
   justify-content: flex-start;
   align-items: center;
 
