--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -23,6 +23,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media only screen and (max-width: 768px) {
+     right: 0;
+    }
   }
 
 
@@ -30,16 +34,15 @@
   &__logo{
    // background-color: purple;
     position: absolute;
-    left: 15%;
+    left: 10%;
     top: 50%;
     transform: translate(-50%,-50%);
 
     display: flex;
     align-items: center;
+    z-index: 100;
 
-    @media only screen and (max-width: 1000px) {
-      left: 10%;
-    }
+
 
     @media only screen and (max-width: 768px) {
       left: 15%;
