--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,9 @@ body {
   .btn--big {
     padding: 2rem 8rem;
     font-size: .9rem; }
+    @media only screen and (max-width: 320px) {
+      .btn--big {
+        padding: 1.5rem 6rem; } }
   .btn--pink {
     background-color: rgba(238, 66, 102, 0.8); }
     .btn--pink:hover {
@@ -183,13 +186,14 @@ body {
     .card {
       width: 45%;
       height: 45%; } }
-<<<<<<< HEAD
   @media only screen and (max-width: 480px) {
     .card {
       width: 75%;
       height: 32%; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
+  @media only screen and (max-width: 320px) {
+    .card {
+      width: 90%;
+      height: 30%; } }
   .card__top {
     flex: 0 0 45%;
     width: 100%;
@@ -325,12 +329,12 @@ body {
     .comment {
       width: 35%;
       margin-bottom: 2rem; } }
-<<<<<<< HEAD
   @media only screen and (max-width: 480px) {
     .comment {
       width: 65%; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
+  @media only screen and (max-width: 320px) {
+    .comment {
+      width: 75%; } }
   .comment__content {
     position: absolute;
     padding: 4rem 1rem;
@@ -390,17 +394,14 @@ body {
   height: 14rem; }
   @media only screen and (max-width: 768px) {
     .counter {
-<<<<<<< HEAD
       width: 40%;
       margin-bottom: 2rem; } }
   @media only screen and (max-width: 480px) {
     .counter {
-      width: 45%; } }
-=======
-      height: 14rem;
-      width: 40%;
-      margin-bottom: 1rem; } }
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
+      width: 47%; } }
+  @media only screen and (max-width: 320px) {
+    .counter {
+      width: 75%; } }
   .counter__svg {
     width: 3rem;
     height: 3rem;
@@ -421,6 +422,9 @@ body {
     color: #ffffff;
     font-weight: 800;
     white-space: nowrap; }
+    @media only screen and (max-width: 768px) {
+      .counter__p {
+        white-space: normal; } }
 
 .form {
   height: 30rem;
@@ -647,7 +651,7 @@ body {
     align-items: center; }
     @media only screen and (max-width: 768px) {
       .header__social-search {
-        right: 0; } }
+        right: 1%; } }
   .header__logo {
     position: absolute;
     left: 10%;
@@ -662,6 +666,9 @@ body {
     @media only screen and (max-width: 480px) {
       .header__logo {
         left: 20%; } }
+    @media only screen and (max-width: 320px) {
+      .header__logo {
+        left: 30%; } }
 
 .footer {
   background-color: #ececec;
@@ -674,14 +681,14 @@ body {
   @media only screen and (max-width: 1000px) {
     .footer {
       height: 30rem; } }
-<<<<<<< HEAD
   @media only screen and (max-width: 480px) {
     .footer {
       height: 50rem;
       justify-content: space-between;
       align-items: center; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
+  @media only screen and (max-width: 320px) {
+    .footer {
+      height: 60rem; } }
   .footer__top {
     flex: 0 0 85%;
     width: 100%;
@@ -713,12 +720,9 @@ body {
     @media only screen and (max-width: 1000px) {
       .footer__top-right {
         flex-wrap: wrap; } }
-<<<<<<< HEAD
     @media only screen and (max-width: 480px) {
       .footer__top-right {
         flex: 1; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
   .footer__bottom {
     flex: 1;
     width: 100%;
@@ -815,27 +819,21 @@ body {
   padding: 4rem 6rem 1rem 6rem;
   display: flex;
   justify-content: center; }
-<<<<<<< HEAD
   @media only screen and (max-width: 768px) {
     .sec-info {
       padding: 4rem 3rem 1rem 3rem; } }
   @media only screen and (max-width: 480px) {
     .sec-info {
       padding: 3rem 2rem; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
   .sec-info__container {
     width: 100%;
     display: flex; }
     @media only screen and (min-width: 1400px) {
       .sec-info__container {
         width: 80%; } }
-<<<<<<< HEAD
     @media only screen and (max-width: 480px) {
       .sec-info__container {
         width: 100%; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
   .sec-info__left {
     flex: 0 0 50%;
     height: 65%;
@@ -847,12 +845,9 @@ body {
     @media only screen and (max-width: 768px) {
       .sec-info__left {
         height: 70%; } }
-<<<<<<< HEAD
     @media only screen and (max-width: 480px) {
       .sec-info__left {
         height: 90%; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
   .sec-info__right {
     flex: 0 0 50%;
     display: flex;
@@ -862,9 +857,6 @@ body {
   .sec-info__img {
     width: 90%;
     height: 90%; }
-  @media only screen and (max-width: 768px) {
-    .sec-info {
-      padding: 4rem 3rem 1rem 3rem; } }
 
 .sec-features {
   padding: 4rem 6rem;
@@ -876,6 +868,9 @@ body {
   @media only screen and (max-width: 768px) {
     .sec-features {
       padding: 3rem; } }
+  @media only screen and (max-width: 320px) {
+    .sec-features {
+      padding: 3rem 1rem; } }
   .sec-features__content {
     width: 90%;
     min-height: 32rem;
@@ -895,6 +890,9 @@ body {
     @media only screen and (max-width: 768px) {
       .sec-features__texts {
         margin-bottom: 2rem; } }
+    @media only screen and (max-width: 480px) {
+      .sec-features__texts {
+        width: 90%; } }
   .sec-features__feature {
     min-height: 13rem;
     width: 27%;
@@ -905,12 +903,9 @@ body {
     align-items: center; }
     .sec-features__feature h2 {
       white-space: nowrap; }
-<<<<<<< HEAD
       @media only screen and (max-width: 480px) {
         .sec-features__feature h2 {
           font-size: .9rem; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
     @media only screen and (max-width: 1000px) {
       .sec-features__feature {
         margin: 1rem; } }
@@ -918,6 +913,10 @@ body {
       .sec-features__feature {
         justify-content: space-around;
         width: 40%; } }
+    @media only screen and (max-width: 320px) {
+      .sec-features__feature {
+        justify-content: space-around;
+        width: 90%; } }
   .sec-features__img {
     width: 2.5rem;
     height: 2.5rem;
@@ -935,6 +934,10 @@ body {
     .sec-workflow {
       height: 80rem;
       padding: 4rem 0 3rem 0; } }
+  @media only screen and (max-width: 320px) {
+    .sec-workflow {
+      height: 90rem;
+      padding: 4rem 0 6rem 0; } }
   .sec-workflow__top {
     height: 5rem;
     width: 70%;
@@ -942,12 +945,18 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between; }
+    @media only screen and (max-width: 320px) {
+      .sec-workflow__top {
+        width: 90%; } }
   .sec-workflow__content {
     flex: 0 0 85%;
     display: flex; }
   .sec-workflow__box {
     height: 10rem;
     width: 80%; }
+    @media only screen and (max-width: 320px) {
+      .sec-workflow__box {
+        width: 100%; } }
   .sec-workflow__left {
     flex: 0 0 48%;
     display: flex;
@@ -982,15 +991,9 @@ body {
     margin-bottom: .5rem;
     letter-spacing: 1px; }
     @media only screen and (max-width: 768px) {
-<<<<<<< HEAD
       .sec-workflow__heading {
         font-size: 1rem; } }
   .sec-workflow__text {
-=======
-      .workflow__heading {
-        font-size: 1rem; } }
-  .workflow__text {
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
     font-size: .9rem; }
     @media only screen and (max-width: 480px) {
       .sec-workflow__text {
@@ -1005,13 +1008,14 @@ body {
     shape-outside: circle(50%);
     margin: 0 1rem; }
     @media only screen and (max-width: 768px) {
-<<<<<<< HEAD
       .sec-workflow__img {
-=======
-      .workflow__img {
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
         width: 6rem;
         height: 6rem; } }
+    @media only screen and (max-width: 320px) {
+      .sec-workflow__img {
+        width: 5rem;
+        height: 5rem;
+        border: 3px solid #e3a396; } }
 
 .sec-counter {
   height: 40rem;
@@ -1033,22 +1037,19 @@ body {
     .sec-counter {
       padding: 3rem 2rem;
       height: 50rem; } }
-<<<<<<< HEAD
   @media only screen and (max-width: 480px) {
     .sec-counter {
       padding: 3rem .5rem;
       height: 55rem; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
+  @media only screen and (max-width: 320px) {
+    .sec-counter {
+      height: 90rem; } }
   .sec-counter__top {
     width: 70%;
     text-align: center; }
     @media only screen and (max-width: 768px) {
       .sec-counter__top {
-<<<<<<< HEAD
         width: 100%;
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
         margin-bottom: 2rem; } }
   .sec-counter__bottom {
     width: 100%;
@@ -1056,18 +1057,14 @@ body {
     justify-content: space-between; }
     @media only screen and (max-width: 768px) {
       .sec-counter__bottom {
-<<<<<<< HEAD
         width: 85%;
         justify-content: space-around;
         flex-wrap: wrap; } }
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 320px) {
       .sec-counter__bottom {
-        width: 100%; } }
-=======
-        width: 65%;
-        justify-content: space-around;
-        flex-wrap: wrap; } }
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
+        width: 100%;
+        flex-direction: column;
+        align-items: center; } }
 
 .sec-cards {
   height: 55rem;
@@ -1084,12 +1081,9 @@ body {
     .sec-cards {
       height: 90rem;
       justify-content: space-around; } }
-<<<<<<< HEAD
   @media only screen and (max-width: 480px) {
     .sec-cards {
       height: 125rem; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
   .sec-cards__cards {
     flex: 0 0 90%;
     width: 100%;
@@ -1104,15 +1098,12 @@ body {
         flex: 0 0 95%;
         flex-wrap: wrap;
         justify-content: space-around; } }
-<<<<<<< HEAD
     @media only screen and (max-width: 480px) {
       .sec-cards__cards {
         flex-direction: column;
         flex-wrap: nowrap;
         justify-content: space-between;
         align-items: center; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
 
 .sec-idea {
   height: 35rem;
@@ -1123,6 +1114,9 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center; }
+  @media only screen and (max-width: 320px) {
+    .sec-idea {
+      height: 25rem; } }
   .sec-idea__text {
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
@@ -1132,12 +1126,12 @@ body {
     @media only screen and (max-width: 768px) {
       .sec-idea__text {
         font-size: 3rem; } }
-<<<<<<< HEAD
     @media only screen and (max-width: 480px) {
       .sec-idea__text {
         font-size: 2.2rem; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
+    @media only screen and (max-width: 320px) {
+      .sec-idea__text {
+        font-size: 1.4rem; } }
 
 .sec-comment {
   height: 40rem;
@@ -1155,13 +1149,10 @@ body {
     .sec-comment {
       padding: 3rem 1rem 2rem 1rem;
       height: 56rem; } }
-<<<<<<< HEAD
   @media only screen and (max-width: 480px) {
     .sec-comment {
       padding: 3rem 1rem 2rem 1rem;
       height: 105rem; } }
-=======
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
   .sec-comment__top {
     flex: 0 0 20%;
     display: flex;
@@ -1178,7 +1169,6 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: flex-start; }
-<<<<<<< HEAD
     @media only screen and (max-width: 1000px) {
       .sec-comment__bottom {
         width: 100%; } }
@@ -1190,8 +1180,3 @@ body {
       .sec-comment__bottom {
         flex-direction: column;
         align-items: center; } }
-=======
-    @media only screen and (max-width: 768px) {
-      .sec-comment__bottom {
-        flex-wrap: wrap; } }
->>>>>>> c1990d952287f7734fb3cb6a4b6201fe30d21f30
